--- a/visualize.ipynb
+++ b/visualize.ipynb
@@ -166,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "histogram_train = torch.load('picie_histogram_coco_1.pkl')\n",
+    "histogram_train = torch.load('picie_histogram_coco.pkl')\n",
     "\n",
     "histogram_train = histogram_train.astype(int)\n",
     "histogram_train = torch.tensor(histogram_train).topk(1, dim=0)[1].flatten()\n",
